added flash screen

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,9 +5,10 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "flutter_vtv",
+            "name": "flutter_vtv (debug mode)",
             "request": "launch",
-            "type": "dart"
+            "type": "dart",
+            "flutterMode": "debug",
         },
         {
             "name": "flutter_vtv (profile mode)",
