--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,14 +8,9 @@ environment:
   sdk: ">=3.2.3 <4.0.0"
 
 dependencies:
-  # functional
-  intl: ^0.19.0
-  dartz: ^0.10.1
-  provider: ^6.1.1
-  get_it: ^7.6.7
-  injectable: ^2.3.2
-  equatable: ^2.0.5
-  connectivity_plus: ^5.0.2
+  # ui
+  flutter_svg: ^2.0.9
+  flutter_native_splash: ^2.3.9
 
   # navigation + state management
   go_router: ^13.0.1
@@ -27,6 +22,15 @@ dependencies:
   # notification
   flutter_local_notifications: ^16.3.1+1
 
+  # functional
+  intl: ^0.19.0
+  dartz: ^0.10.1
+  provider: ^6.1.1
+  get_it: ^7.6.7
+  injectable: ^2.3.2
+  equatable: ^2.0.5
+  connectivity_plus: ^5.0.2
+  
   flutter:
     sdk: flutter
 
@@ -35,11 +39,15 @@ dependencies:
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
+  injectable_generator:
+  change_app_package_name:
+  build_runner:
+
   flutter_test:
     sdk: flutter
 
   # activated in the `analysis_options.yaml` file.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 # following page: https://dart.dev/tools/pub/pubspec
 flutter:
@@ -49,9 +57,8 @@ flutter:
   uses-material-design: true
 
   assets:
+    - assets/
     - assets/images/
-    - assets/images/pages/
-    - assets/images/pages/intro/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
