--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
+  flutter_launcher_icons: ^0.13.1
   injectable_generator:
   change_app_package_name:
   build_runner:
@@ -61,6 +62,8 @@ flutter:
     - google_fonts/
     - assets/
     - assets/images/
+    - assets/svg/
+    - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
