--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,13 +12,16 @@ dependencies:
   flutter_svg: ^2.0.9
   flutter_native_splash: ^2.3.9
   google_fonts: ^6.1.0
+  # awesome_snackbar_content
 
   # navigation + state management
   go_router: ^13.0.1
   flutter_bloc: ^8.1.3
 
   # storage
+  image_picker: ^1.0.7
   shared_preferences: ^2.2.2
+  flutter_secure_storage: ^9.0.0
 
   # notification
   flutter_local_notifications: ^16.3.1+1
@@ -28,10 +31,13 @@ dependencies:
   dartz: ^0.10.1
   provider: ^6.1.1
   get_it: ^7.6.7
-  injectable: ^2.3.2
   equatable: ^2.0.5
+
+  # network
+  http: ^1.2.0
   connectivity_plus: ^5.0.2
   
+  logger: ^2.0.2+1
   flutter:
     sdk: flutter
 
@@ -41,12 +47,13 @@ dependencies:
 
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
-  injectable_generator:
-  change_app_package_name:
-  build_runner:
-
+  change_app_package_name: ^1.1.0
+  build_runner: ^2.4.8
   flutter_test:
     sdk: flutter
+  bloc_test: ^9.1.5
+  mockito: ^5.4.4
+  mocktail: ^1.0.3
 
   # activated in the `analysis_options.yaml` file.
   flutter_lints: ^3.0.1
