--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,8 @@ dependencies:
   provider: ^6.1.1
   get_it: ^7.6.7
   equatable: ^2.0.5
-
+  jwt_decoder: ^2.0.1
+  
   # network
   http: ^1.2.0
   connectivity_plus: ^5.0.2
