--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,8 +27,10 @@ dependencies:
   flutter_secure_storage: ^9.0.0
 
   # notification
+  firebase_messaging: ^14.7.17
   flutter_local_notifications: ^16.3.1+1
   firebase_core: ^2.25.4
+  fluttertoast: ^8.2.4
 
   # functional
   intl: ^0.19.0
@@ -37,7 +39,6 @@ dependencies:
   get_it: ^7.6.7
   equatable: ^2.0.5
   jwt_decoder: ^2.0.1
-
   # network
   http: ^1.2.0
   connectivity_plus: ^5.0.2
