fix bug & merge with Vuong br

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "cSpell.words": [
         "autovalidate",
         "hcmute",
+        "khóa",
         "kltn",
         "mocktail",
         "prefs",
