--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   google_fonts: ^6.1.0
   cupertino_icons: ^1.0.2
   photo_view: ^0.14.0
+  cached_network_image: ^3.3.1
   # awesome_snackbar_content
 
   # navigation + state management
