--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   photo_view: ^0.14.0
   cached_network_image: ^3.3.1
+  flutter_slidable: ^3.1.0
   # awesome_snackbar_content
 
   # navigation + state management
