--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
 
   # notification
   firebase_messaging: ^14.7.17
-  flutter_local_notifications: ^16.3.1+1
+  flutter_local_notifications: ^17.0.0
   firebase_core: ^2.25.4
   fluttertoast: ^8.2.4
 
@@ -44,7 +44,7 @@ dependencies:
   jwt_decoder: ^2.0.1
   # network
   http: ^1.2.0
-  connectivity_plus: ^5.0.2
+  connectivity_plus: ^6.0.1
 
   # dev
   logger: ^2.0.2+1
