checkout with voucher & favorite product

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,9 +6,11 @@
         "khóa",
         "kltn",
         "mocktail",
+        "momo",
         "prefs",
         "ribeye",
-        "Schyler"
+        "Schyler",
+        "zalopay"
     ],
     "java.configuration.updateBuildConfiguration": "automatic"
 }
