--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
 
     <application
-        android:label="flutter_vtv"
+        android:label="VTV"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
