--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   cached_network_image: ^3.3.1
   flutter_slidable: ^3.1.0
   flutter_rating_bar: ^4.0.1
+  timelines: ^0.1.0
   # awesome_snackbar_content
 
   # navigation + state management
@@ -47,7 +48,9 @@ dependencies:
   jwt_decoder: ^2.0.1
   # network
   http: ^1.2.0
+  dio: ^5.4.2+1
   connectivity_plus: ^6.0.1
+  # retry: ^3.1.2
 
   # dev
   logger: ^2.0.2+1
