--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ dependencies:
   flutter_bloc: ^8.1.3
 
   # storage
-  image_picker: ^1.0.7
+  image_picker: ^1.0.8
   shared_preferences: ^2.2.2
   flutter_secure_storage: ^9.0.0
 
@@ -46,10 +46,12 @@ dependencies:
   get_it: ^7.6.7
   equatable: ^2.0.5
   jwt_decoder: ^2.0.1
+
   # network
   http: ^1.2.0
   dio: ^5.4.2+1
   connectivity_plus: ^6.0.1
+  http_parser: ^4.0.2
   # retry: ^3.1.2
 
   # dev
