gonna delete DataResponse

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "prefs",
         "ribeye",
         "Schyler",
+        "Unfollow",
         "zalopay"
     ],
     "java.configuration.updateBuildConfiguration": "automatic"
