place order from multi-store

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   cached_network_image: ^3.3.1
   flutter_slidable: ^3.1.0
   timelines: ^0.1.0
+  flutter_rating_bar: ^4.0.1
   # awesome_snackbar_content
 
   # navigation + state management
