Changed - refactor checkout UI - paymentMethod string -> enum Added - VNPay payment (single + multi order)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "java.compile.nullAnalysis.mode": "automatic",
     "cSpell.words": [
+        "APIVN",
         "autovalidate",
+        "giftcard",
         "hcmute",
         "khóa",
         "kltn",
@@ -11,6 +13,7 @@
         "ribeye",
         "Schyler",
         "Unfollow",
+        "vnpay",
         "zalopay"
     ],
     "java.configuration.updateBuildConfiguration": "automatic"
