--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   dio: ^5.4.2+1
   connectivity_plus: ^6.0.1
   http_parser: ^4.0.2
+  webview_flutter: ^4.7.0
   # retry: ^3.1.2
 
   # dev
