[Added] fcm on terminated app + migrate
[Added] fcm on terminated app
[Changed] migrate some theme properties

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "cSpell.words": [
         "APIVN",
         "autovalidate",
+        "Cacheable",
         "giftcard",
         "hcmute",
         "khóa",
