--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,14 +20,14 @@
             "flutterMode": "profile",
             "args": ["--flavor", "dev", "--target", "lib/main.dart" ]
         },
-        {
-            "name": "staging",
-            "request": "launch",
-            "type": "dart",
-            "program": "lib/main.dart",
-            "flutterMode": "release",
-            "args": ["--flavor", "staging", "--target", "lib/main.dart" ]
-        },
+        // {
+        //     "name": "staging",
+        //     "request": "launch",
+        //     "type": "dart",
+        //     "program": "lib/main.dart",
+        //     "flutterMode": "release",
+        //     "args": ["--flavor", "staging", "--target", "lib/main.dart" ]
+        // },
         {
             "name": "release",
             "request": "launch",
