--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -82,11 +82,11 @@ android {
             applicationIdSuffix ".dev"
         }
 
-        staging {
-            dimension "mode"
-            resValue "string", "app_name", "[stg] VTV"
-            applicationIdSuffix ".stg"
-        }
+        // staging {
+        //     dimension "mode"
+        //     resValue "string", "app_name", "[stg] VTV"
+        //     applicationIdSuffix ".stg"
+        // }
 
         product {
             dimension "mode"
@@ -104,7 +104,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.11.0'
     // Import the Firebase BoM
     implementation platform('com.google.firebase:firebase-bom:33.1.0')
-    // TODO: Add the dependencies for Firebase products you want to use
+    // _TODO: Add the dependencies for Firebase products you want to use
     // When using the BoM, don't specify versions in Firebase dependencies
     implementation 'com.google.firebase:firebase-analytics'
 
