--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: flutter_vtv
 description: "VTV is an E-commerce App using Flutter"
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 0.0.10-dev.4
+version: 1.0.2
 
 environment:
   sdk: ">=3.2.3 <4.0.0"
@@ -83,7 +83,6 @@ flutter:
   uses-material-design: true
 
   assets:
-    - google_fonts/
     - assets/
     - assets/images/
     - assets/images/placeholders/
