--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: flutter_vtv
 description: "VTV is an E-commerce App using Flutter"
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.7
+version: 1.0.7+1
 
 environment:
   sdk: ">=3.2.3 <4.0.0"
